--- a/BLUPsandEBVs.Rmd
+++ b/BLUPsandEBVs.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Data Import
 
-For this analysis I've downloaded two datasets. A spreadsheet with all the NCSU yield data available in the database (downloaded from the wizard), and a pedigree file for all the accessions with yield data (from the download page, using an accession list). The first thing I want to do is load the yield data into R and do some simple filtering and processing so I can look specifically the total yield per plant of accessions that are still active in the program.
+For this analysis I've downloaded two datasets. A spreadsheet with all the NCSU yield data available in the database (downloaded from the wizard), and a pedigree file for all the accessions with yield data (from the download page, using an accession list). Step 1 is to load the yield data into R and do some simple filtering and processing so I can look specifically the total yield per plant of accessions that are still active in the program.
 
 ```{r}
 
@@ -84,105 +84,94 @@ Calculate total yield and %Cov BLUPs for each genotype, fitting year, location, 
 
 ```{r}
 
-# library(lme4)
-# 
-# # Total Yield BLUPS
-# totalmodel = lmer(totalperplant~ (1|germplasmName) + locationName, data = yield, control=lmerControl(check.nlev.gtr.1="warning"))
-# 
-# totalblup = ranef(totalmodel)$germplasmName
-# names(totalblup) <- c("BLUP")
-# totalblup <- totalblup[order(-totalblup$BLUP),,drop = FALSE]
-# head(totalblup, n=15)
-# 
-# # Total %COV BLUPS
-# covtotalmodel = lmer(TotalYieldPerCov~ (1|germplasmName), data = yield, control=lmerControl(check.nlev.gtr.1="warning"))
-# 
-# covtotalblup = ranef(covtotalmodel)$germplasmName
-# names(covtotalblup) <- c("BLUP")
-# percovblup <- covtotalblup[order(-covtotalblup$BLUP),,drop = FALSE]
-# head(percovblup, n=15)
+library(lme4)
 
-```
-
-# 2.5 As proof of concept, calculate manual BLUPS and compare to previous BLUPs
-
-```{r}
-
-# Retrieve the variance components from the total yield model
+# Total Yield BLUPS
 totalmodel = lmer(totalperplant~ (1|germplasmName) + locationName, data = yield, control=lmerControl(check.nlev.gtr.1="warning"))
-vt = as.data.frame(VarCorr(totalmodel))
-Vg = vt$vcov[vt$grp == "germplasmName"]
-Ve = vt$vcov[vt$grp == "Residual"]
-alpha = Ve/Vg
 
-y <- as.vector(yield$totalperplant)
-X <- model.matrix(totalperplant~locationName, data=yield)
-Z <- model.matrix(totalperplant~germplasmName-1, data=yield)
-colnames(Z)= gsub("germplasmName", "", colnames(Z))
-Ident = diag(length(colnames(Z)))
-
-c11= t(X)%*%X
-c12= t(X)%*%Z
-c21= t(Z)%*%X
-c22= t(Z)%*%Z + Ident*alpha
-RHS= rbind(t(X)%*%y,t(Z)%*%y)
-upper_LHS= cbind(c11, c12)
-lower_LHS= cbind(c21, c22)
-LHS= rbind(upper_LHS, lower_LHS)
-invLHS = solve(LHS)
-hatvec = invLHS %*% RHS
-betahat = hatvec[1:ncol(X)]
-head(betahat)
-uhat = hatvec[-(1:ncol(X))] # EBVs
-BLUPs = as.data.frame(uhat)
-BLUPs$germplasmName = colnames(Z)
-totalblup = BLUPs %>% arrange(desc(uhat))
+totalintercept <- fixef(totalmodel)[1]
+totalblup = ranef(totalmodel)$germplasmName + totalintercept
+names(totalblup) <- c("BLUP")
+totalblup$germplasmName <- rownames(totalblup)
+totalblup <- totalblup[order(-totalblup$BLUP),,drop = FALSE]
 head(totalblup, n=15)
 
-# Total %Cov maunal BLUPS
+# Total %COV BLUPS
+covtotalmodel = lmer(TotalYieldPerCov~ (1|germplasmName), data = yieldwithcov, control=lmerControl(check.nlev.gtr.1="warning"))
 
-covmodel = lmer(TotalYieldPerCov~ (1|germplasmName) + locationName, data = yieldwithcov, control=lmerControl(check.nlev.gtr.1="warning"))
-vt = as.data.frame(VarCorr(covmodel))
-Vg = vt$vcov[vt$grp == "germplasmName"]
-Ve = vt$vcov[vt$grp == "Residual"]
-alpha = Ve/Vg
-
-y <- as.vector(yieldwithcov$TotalYieldPerCov)
-X <- model.matrix(TotalYieldPerCov~locationName, data=yieldwithcov)
-Z <- model.matrix(TotalYieldPerCov~germplasmName-1, data=yieldwithcov)
-colnames(Z)= gsub("germplasmName", "", colnames(Z))
-Ident = diag(length(colnames(Z)))
-c11= t(X)%*%X
-c12= t(X)%*%Z
-c21= t(Z)%*%X
-c22= t(Z)%*%Z + Ident*alpha
-RHS= rbind(t(X)%*%y,t(Z)%*%y)
-upper_LHS= cbind(c11, c12)
-lower_LHS= cbind(c21, c22)
-LHS= rbind(upper_LHS, lower_LHS)
-invLHS = solve(LHS)
-hatvec = invLHS %*% RHS
-betahat = hatvec[1:ncol(X)]
-head(betahat)
-uhat = hatvec[-(1:ncol(X))] # EBVs
-BLUPs = as.data.frame(uhat)
-BLUPs$germplasmName = colnames(Z)
-percovblup = BLUPs %>% arrange(desc(uhat))
+covtotalintercept <- fixef(covtotalmodel)
+covtotalblup = ranef(covtotalmodel)$germplasmName + covtotalintercept
+names(covtotalblup) <- c("BLUP")
+covtotalblup$germplasmName <- rownames(covtotalblup)
+percovblup <- covtotalblup[order(-covtotalblup$BLUP),,drop = FALSE]
 head(percovblup, n=15)
+ 
+```
+
+# 3 For more flexible analysis, define a custom mixed model function for calculating BLUPs that allows pedigree input in form of an additive relationship matrix. Based on material from Cornell's PLBRG 4080 course.
+
+Once defined, optionally show that the same BLUPS calculated in the previous step can be produced with the custom function.
+
+```{r}
+# Custom mixed model function 
+
+customMM <- function(alpha, y, X, Z, A) {
+  # return a new 2 column data frame containing random effect estimates. These will be breeding values / EBVs if A matrix is the inverse of the additive relationship matrix, or simple BLUPs if it is a simple identity matrix.
+  c11= t(X)%*%X
+  c12= t(X)%*%Z
+  c21= t(Z)%*%X
+  c22= t(Z)%*%Z + A*alpha
+  RHS= rbind(t(X)%*%y,t(Z)%*%y)
+  upper_LHS= cbind(c11, c12)
+  lower_LHS= cbind(c21, c22)
+  LHS= rbind(upper_LHS, lower_LHS)
+  invLHS = solve(LHS)
+  hatvec = invLHS %*% RHS
+  uhat = hatvec[-(1:ncol(X))]
+  result = as.data.frame(uhat)
+  result$id = colnames(Z)
+  return(result %>% arrange(desc(uhat)))
+}
+
+# Total BLUPS from customMM
+# totalmodel = lmer(totalperplant~ (1|germplasmName) + locationName, data = yield, control=lmerControl(check.nlev.gtr.1="warning"))
+# vt = as.data.frame(VarCorr(totalmodel))
+# Vg = vt$vcov[vt$grp == "germplasmName"]
+# Ve = vt$vcov[vt$grp == "Residual"]
+# alpha = Ve/Vg
+# 
+# y <- as.vector(yield$totalperplant)
+# X <- model.matrix(totalperplant~locationName, data=yield)
+# Z <- model.matrix(totalperplant~germplasmName-1, data=yield)
+# colnames(Z)= gsub("germplasmName", "", colnames(Z))
+# Ident = diag(length(colnames(Z)))
+# 
+# totalblup = customMM(alpha, y, X, Z, Ident)
+# head(totalblup, n=15)
+# 
+# # Total %Cov from customMM
+# covmodel = lmer(TotalYieldPerCov~ (1|germplasmName) + locationName, data = yieldwithcov, control=lmerControl(check.nlev.gtr.1="warning"))
+# vt = as.data.frame(VarCorr(covmodel))
+# Vg = vt$vcov[vt$grp == "germplasmName"]
+# Ve = vt$vcov[vt$grp == "Residual"]
+# covalpha = Ve/Vg
+# 
+# covy <- as.vector(yieldwithcov$TotalYieldPerCov)
+# covX <- model.matrix(TotalYieldPerCov~locationName, data=yieldwithcov)
+# covZ <- model.matrix(TotalYieldPerCov~germplasmName-1, data=yieldwithcov)
+# colnames(Z)= gsub("germplasmName", "", colnames(Z))
+# covIdent = diag(length(colnames(Z)))
+# percovblup = customMM(covalpha, covy, covX, covZ, covIdent)
+# head(percovblup, n=15)
 
 ```
 
 ## Option 3: EBVs
 
-Calculate then estimated breeding values. Essentially the same as BLUPs, but now taking into account pedigree information. I have not had much luck using pedigreemm, so instead will calcualte the EBVs manually as covered in PLBRG 4080
+Now loading pedigree info to create an additive relationship matrix and use it to calculate EBVs
 
 ```{r}
-
-# Retrieve the variance components from the total yield model
-vt = as.data.frame(VarCorr(totalmodel))
-Vg = vt$vcov[vt$grp == "germplasmName"]
-Ve = vt$vcov[vt$grp == "Residual"]
-alpha = Ve/Vg
+library(pedigreemm)
 
 #read in pedigree file download from spbase and remove duplicated rows
 ped <- read.table ("pedigree.txt", header = TRUE, sep = "\t", check.names = FALSE, stringsAsFactors = FALSE)
@@ -193,11 +182,12 @@ P2= editPed(dam=ped$Female_Parent, sire=ped$Male_Parent, label=ped$Accession)
 # read records corrected by editPed into a formal pedigree object
 P3= pedigree(P2$sire, P2$dam, P2$label)
 Amat <- getA(P3)
-dim(Amat)
-#include_list <- yield$germplasmName
-#Amat <- Amat[rownames(Amat) %in% include_list, colnames(Amat) %in% include_list] 
 
-#unique(yield$germplasmName)
+# Retrieve the variance components from the total yield model
+vt = as.data.frame(VarCorr(totalmodel))
+Vg = vt$vcov[vt$grp == "germplasmName"]
+Ve = vt$vcov[vt$grp == "Residual"]
+alpha = Ve/Vg
 
 y <- as.vector(yield$totalperplant)
 X <- model.matrix(totalperplant~locationName, data=yield)
@@ -206,54 +196,25 @@ colnames(Z)= gsub("germplasmName", "", colnames(Z))
 
 Amat= Amat[colnames(Z),colnames(Z)]
 Amatinv= solve(Amat)
-
-c11= t(X)%*%X
-c12= t(X)%*%Z
-c21= t(Z)%*%X
-c22= t(Z)%*%Z + Amatinv*alpha
-RHS= rbind(t(X)%*%y,t(Z)%*%y)
-upper_LHS= cbind(c11, c12)
-lower_LHS= cbind(c21, c22)
-LHS= rbind(upper_LHS, lower_LHS)
-invLHS = solve(LHS)
-hatvec = invLHS %*% RHS
-betahat = hatvec[1:ncol(X)]
-head(betahat)
-uhat = hatvec[-(1:ncol(X))] # EBVs
-EBVs = as.data.frame(uhat)
-EBVs$germplasmName = colnames(Z)
-totalebv = EBVs %>% arrange(desc(uhat))
+totalebv = customMM(alpha, y, X, Z, Amatinv)
+totalebv$uhat <- totalebv$uhat + totalintercept 
 head(totalebv, n=15)
 
 # Total %Cov EBVS
 
-vt = as.data.frame(VarCorr(covmodel))
-Vg = vt$vcov[vt$grp == "germplasmName"]
-Ve = vt$vcov[vt$grp == "Residual"]
-alpha = Ve/Vg
+covvt = as.data.frame(VarCorr(covtotalmodel))
+covVg = covvt$vcov[covvt$grp == "germplasmName"]
+covVe = covvt$vcov[covvt$grp == "Residual"]
+covalpha = covVe/covVg
 
-y <- as.vector(yieldwithcov$TotalYieldPerCov)
-X <- model.matrix(TotalYieldPerCov~locationName, data=yieldwithcov)
-Z <- model.matrix(TotalYieldPerCov~germplasmName-1, data=yieldwithcov)
-colnames(Z)= gsub("germplasmName", "", colnames(Z))
-Amat= Amat[colnames(Z),colnames(Z)]
-Amatinv= solve(Amat)
-c11= t(X)%*%X
-c12= t(X)%*%Z
-c21= t(Z)%*%X
-c22= t(Z)%*%Z + Amatinv*alpha
-RHS= rbind(t(X)%*%y,t(Z)%*%y)
-upper_LHS= cbind(c11, c12)
-lower_LHS= cbind(c21, c22)
-LHS= rbind(upper_LHS, lower_LHS)
-invLHS = solve(LHS)
-hatvec = invLHS %*% RHS
-betahat = hatvec[1:ncol(X)]
-head(betahat)
-uhat = hatvec[-(1:ncol(X))] # EBVs
-EBVs = as.data.frame(uhat)
-EBVs$germplasmName = colnames(Z)
-percovebv = EBVs %>% arrange(desc(uhat))
+covy <- as.vector(yieldwithcov$TotalYieldPerCov)
+covX <- model.matrix(TotalYieldPerCov~locationName, data=yieldwithcov)
+covZ <- model.matrix(TotalYieldPerCov~germplasmName-1, data=yieldwithcov)
+colnames(covZ)= gsub("germplasmName", "", colnames(covZ))
+covAmat= Amat[colnames(covZ),colnames(covZ)]
+covAmatinv= solve(covAmat)
+percovebv = customMM(covalpha, covy, covX, covZ, covAmatinv)
+percovebv$uhat <- percovebv$uhat + covtotalintercept 
 head(percovebv, n=15)
 
 ```
@@ -267,26 +228,28 @@ library(grid)
 # cbind all ranked lists and draw a table
 total$"total" <- apply( total[ , c("germplasmName","totalperplant") ] , 1 , paste , collapse = " - " )
 percov$"percov" <- apply( percov[ , c("germplasmName","TotalYieldPerCov") ] , 1 , paste , collapse = " - " )
-#totalblup$names <- rownames(totalblup)
-totalblup$"totalBLUP" <- apply( totalblup[ , c("germplasmName","uhat") ] , 1 , paste , collapse = " - " )
-#percovblup$names <- rownames(percovblup)
-percovblup$"percovBLUP" <- apply( percovblup[ , c("germplasmName","uhat") ] , 1 , paste , collapse = " - " )
-#totalebv$names <- rownames(totalebv)
-totalebv$"totalEBV" <- apply( totalebv[ , c("germplasmName","uhat") ] , 1 , paste , collapse = " - " )
-#percovebv$names <- rownames(percovebv)
-percovebv$"percovEBV" <- apply( percovebv[ , c("germplasmName","uhat") ] , 1 , paste , collapse = " - " )
+totalblup$"totalBLUP" <- apply( totalblup[ , c("germplasmName","BLUP") ] , 1 , paste , collapse = " - " )
+percovblup$"percovBLUP" <- apply( percovblup[ , c("germplasmName","BLUP") ] , 1 , paste , collapse = " - " )
+totalebv$"totalEBV" <- apply( totalebv[ , c("id","uhat") ] , 1 , paste , collapse = " - " )
+percovebv$"percovEBV" <- apply( percovebv[ , c("id","uhat") ] , 1 , paste , collapse = " - " )
 
 totald <- as.data.frame(cbind(
   head(total$`total`, n=15), 
-  head(percov$`percov`, n=15), 
   head(totalblup$`totalBLUP`, n=15), 
+  head(totalebv$`totalEBV`, n=15)
+))
+
+names(totald) <- c("TotalKg/plant", "TotalKg/plant BLUPs","TotalKgperplant EBVs")
+grid.table(totald)
+
+covtotald <- as.data.frame(cbind(
+  head(percov$`percov`, n=15), 
   head(percovblup$`percovBLUP`, n=15),
-  head(totalebv$`totalEBV`, n=15), 
   head(percovebv$`percovEBV`, n=15)
 ))
 
-names(totald) <- c("TotalKg/plant", "TotalKg%Covington", "TotalKg/plant BLUPs", "TotalKg%Covington BLUPs","TotalKgperplant EBVs","TotalKg%Covington EBVs")
-grid.table(totald)
+names(covtotald) <- c("TotalKg%Covington", "TotalKg%Covington BLUPs", "TotalKg%Covington EBVs")
+grid.table(covtotald)
 
 ```
 
